[package]
name = "learn-axum"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "^0.5"
bytes = "1.0"
console-subscriber = "0.1"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "0.5"
mini-redis = "0.4"
regex = "1.5"
serde = "^1"
serde_json = "^1.0"
tokio = { version = "1", features = ["full", "tracing"] }
tower = { version = "0.4.11", default-features = false, features = ["util", "buffer", "make"] }

[profile.release]
strip = true
